--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,6 +26,15 @@
 				<span><a href="/authors">Autores</a></span>
 			</nav>
 			<section class="main" id="s1">
+                            <% if (errors.length) { %>
+      	<span id='ErrorMsgs'>
+        	Corregir errores:<br/>
+        	<% for (var i in errors) { %>
+           	<span> <%= errors[i].message %> </span><br/>
+        	<% } %>
+	      </span>
+	    <% } %>
+
 				<div><%- body %></div>
 			</section>
 	
